# kuery

./: .eslintrc.js  .gitignore  .prettierignore  .prettierrc  .prettierrc.mjs  AGENTS.md  CONTRIBUTING.md  LICENSE.md  README.md  background.ts  content.ts  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  popup.module.css  popup.tsx  tsconfig.json  tsconfig.tsbuildinfo
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml
assets/: inject.js  sql-wasm.js
chrome-extension/: README.md  background.js  content.js  manifest.json
components/: CopyButton.tsx  DeleteConfirmation.tsx  LoadingScreen.tsx  MainScreen.tsx  Modal.tsx  PopupHeader.tsx  QueryDetail.tsx  QueryDetailModal.tsx  QueryList.tsx  SQLiteStatus.tsx  SearchBox.tsx  TabMainScreen.tsx
hooks/copilot-cli/: README.md  kuery.json  post-tool-use.ps1  post-tool-use.sh
options/: index.tsx
plugin/: README.md  hooks.json  mcp.json  plugin.json
src/: App.css  App.tsx  api.ts  hooks.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  ai.rs  api.rs  copilot_cli.rs  ipc.rs  lib.rs  main.rs  mcp.rs  store.rs
src/components/: CopilotCliStatusBadge.tsx  EmptyState.tsx  QueryDetail.tsx  QueryList.tsx  SettingsModal.tsx  SmartEmptyState.tsx  WelcomeModal.tsx
tabs/: main.tsx
